--- a/html/vumeter.css
+++ b/html/vumeter.css
@@ -1,3 +1,9 @@
+body {
+    width: 100vw;
+    height: 100vh;
+    overflow-y: scroll;
+}
+
 #container {
     display: grid;
     grid-template-rows:  50px 1fr auto;
@@ -9,9 +15,10 @@
 }    
 
 #optbar {
-    display: inline-block;
+    display: inline;
     grid-area: button;
     margin: 10px auto;
+    padding-left: 10px;
 }
 
 #button {
@@ -19,7 +26,7 @@
     line-height: 30px;
     height: 30px;
     margin: 10px auto;
-    padding: 0 1em;
+    padding: 0 0.2em;
     border: 2px green solid;
 }
 
@@ -49,7 +56,7 @@
     height: 30px;
     border-radius: 20%;
     background-color: red;
-    padding: 0 1em;
+    padding: 0;
 }
 #circle.on {
     background-color: green;
@@ -87,7 +94,7 @@
 }
 
 .hspace {
-    margin: 0 20px;
+    margin: 0 10px;
 }
 
 .session {
